--- a/deno.json
+++ b/deno.json
@@ -5,7 +5,6 @@
   },
   "imports": {
     "@juannpz/deno-server-tools": "jsr:@juannpz/deno-server-tools@^0.11.0",
-    "@std/dotenv": "jsr:@std/dotenv@^0.225.3",
-    "djwt": "npm:djwt@^2.0.0"
+    "@std/dotenv": "jsr:@std/dotenv@^0.225.3"
   }
 }
