--- a/deno.json
+++ b/deno.json
@@ -4,7 +4,9 @@
     "start": "deno run --allow-net --allow-read --allow-env index.ts"
   },
   "imports": {
-    "@juannpz/deno-server-tools": "jsr:@juannpz/deno-server-tools@^0.11.0",
+    "@db/postgres": "jsr:@db/postgres@^0.19.5",
+    "@juannpz/deno-service-tools": "jsr:@juannpz/deno-service-tools@^0.5.2",
+    "@nodef/extra-sql": "jsr:@nodef/extra-sql@^0.1.2",
     "@std/dotenv": "jsr:@std/dotenv@^0.225.3"
   }
 }
