--- a/deno.json
+++ b/deno.json
@@ -6,7 +6,7 @@
   "imports": {
     "@db/postgres": "jsr:@db/postgres@^0.19.5",
     "@juannpz/deno-service-tools": "jsr:@juannpz/deno-service-tools@^0.5.5",
-    "@nodef/extra-sql": "jsr:@nodef/extra-sql@^0.1.2",
+    "@juannpz/extra-sql": "jsr:@juannpz/extra-sql@^0.0.1",
     "@std/dotenv": "jsr:@std/dotenv@^0.225.3"
   }
 }
