--- a/deno.json
+++ b/deno.json
@@ -6,7 +6,7 @@
   "imports": {
     "@db/postgres": "jsr:@db/postgres@^0.19.5",
     "@juannpz/deno-service-tools": "jsr:@juannpz/deno-service-tools@^0.5.7",
-    "@juannpz/extra-sql": "jsr:@juannpz/extra-sql@0.0.7-1",
+    "@juannpz/extra-sql": "jsr:@juannpz/extra-sql@0.0.8",
     "@std/dotenv": "jsr:@std/dotenv@^0.225.5"
   }
 }
